@@ -48,6 +48,7 @@ VerboseMultiSubmit, ReplaceHelpImg
 + [import] Remove support for the unactive docSQL import format
 - bug #3577443 [edit] "Browse foreign values" does not show on ajax edit
 + rfe #3522109 [browse] Grid editing: action to trigger it (or disable)
+- bug #3578776 [search] Editing SQL not possible when no records found
 
 3.5.4.0 (not yet released)
 - bug #3570212 [edit] uuid_short() is a no-arguments function
